# sys-info-node

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: continous_deployment.yml
src/: cpu.rs  disk.rs  lib.rs  load_avg.rs  mem.rs
