[package]
name = "sys-info-node"
version = "0.1.0"
description = "A wrapper for the sys-info crate for node."
authors = ["maxblan"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
sysinfo = "0.30.7"
